created preview grid and moved the game info in style.css

--- a/game.html
+++ b/game.html
@@ -236,7 +236,22 @@
         <h3>Score:<span id = 'score'>0</span></h3>
         <h3> Level:<span id = 'level'>1</span></h3>
         <div id="next-peice"> <h3>Next</h3>
-        
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
 
         </div>
 
