--- a/game.html
+++ b/game.html
@@ -235,7 +235,8 @@
       <div class = "game-info">
         <h3>Score:<span id = 'score'>0</span></h3>
         <h3> Level:<span id = 'level'>1</span></h3>
-        <div id="next-peice"> <h3>Next</h3>
+        <h3>Next Piece</h3>
+        <div id="next-peice"> 
           <div></div>
           <div></div>
           <div></div>
