created increase level function

--- a/game.html
+++ b/game.html
@@ -236,7 +236,7 @@
         <h3>Score:<span id = 'score'>0</span></h3>
         <h3> Level:<span id = 'level'>1</span></h3>
         <h3>Next Piece</h3>
-        <div id="next-peice"> 
+        <div class="next-piece"> 
           <div></div>
           <div></div>
           <div></div>
