justified all content to the center on style.css

--- a/game.html
+++ b/game.html
@@ -235,7 +235,7 @@
       <div class = "game-info">
         <h3>Score:<span id = 'score'>0</span></h3>
         <h3> Level:<span id = 'level'>1</span></h3>
-        <h3>Next Piece</h3>
+        <!-- <h3>Next Piece</h3> -->
         <div class="next-piece"> 
           <div></div>
           <div></div>
