--- a/game.html
+++ b/game.html
@@ -13,7 +13,7 @@
     <header class="game-header">
       <div class="container">
         <div class="game-header__Title">
-          <a href="index.html"><h1>Tetris</h1></a>
+          <a href="index.html"><h1>TetRiS</h1></a>
         </div>
         </div>
     </header>
