--- a/game.html
+++ b/game.html
@@ -233,8 +233,8 @@
       </div>
       
       <div class = "game-info">
+        <h1 id="message">BEGIN</h1>
         <h2>Score:<span id = 'score'>0</span></h2>
-        <h2> Level:<span id = 'level'>1</span></h2>
         <!-- <h3>Next Piece</h3> -->
         <div class="next-piece"> 
           <div></div>
