edited homepage css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <main>
     <div class="container">
 
-      <h1 class="title --large">Tetris</h1>
+      <h1 class="title --large">TetRiS</h1>
       <a class="button" href="game.html">Start</a>
 
     </div>
